# GMM

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: GMPHD.h
src/: CMakeLists.txt  GMPHD.cpp  main.cpp
